--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,88 @@
-ecommerce-website/
-├── css/
-│   └── styles.css (puede estar vacío si usás Bootstrap solamente)
-├── img/
-│   ├── slide1.jpg
-│   ├── slide2.jpg
-│   ├── slide3.jpg
-│   ├── frutas.jpg
-│   ├── verduras.jpg
-│   └── snacks.jpg
-├── index.html
+<!DOCTYPE html><html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tienda de Alimentos Saludables</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+    }
+    .product-card img {
+      height: 200px;
+      object-fit: cover;
+    }
+  </style>
+</head>
+<body>  <!-- Header -->  <header class="bg-success text-white p-3">
+    <div class="container d-flex justify-content-between align-items-center">
+      <h1 class="h3">🥦 EcoAlimentos</h1>
+      <nav>
+        <a href="#ofertas" class="text-white me-3">Ofertas</a>
+        <a href="#productos" class="text-white me-3">Productos</a>
+        <a href="#contacto" class="text-white">Contacto</a>
+      </nav>
+    </div>
+  </header>  <!-- Carousel -->  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/slide1.jpg" class="d-block w-100" alt="Frutas frescas">
+      </div>
+      <div class="carousel-item">
+        <img src="img/slide2.jpg" class="d-block w-100" alt="Verduras orgánicas">
+      </div>
+      <div class="carousel-item">
+        <img src="img/slide3.jpg" class="d-block w-100" alt="Snacks saludables">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>  <!-- Productos Destacados -->  <main class="container my-5" id="productos">
+    <h2 class="text-center mb-4">Productos Destacados</h2>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card product-card">
+          <img src="img/frutas.jpg" class="card-img-top" alt="Frutas">
+          <div class="card-body">
+            <h5 class="card-title">Frutas Variadas</h5>
+            <p class="card-text">Selección de frutas de estación. Frescas y naturales.</p>
+            <p class="fw-bold">$1.500</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card product-card">
+          <img src="img/verduras.jpg" class="card-img-top" alt="Verduras">
+          <div class="card-body">
+            <h5 class="card-title">Verduras Orgánicas</h5>
+            <p class="card-text">Cosechadas sin agroquímicos. Ricas y saludables.</p>
+            <p class="fw-bold">$1.200</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card product-card">
+          <img src="img/snacks.jpg" class="card-img-top" alt="Snacks">
+          <div class="card-body">
+            <h5 class="card-title">Snacks Saludables</h5>
+            <p class="card-text">Ideal para llevar. Hechos con ingredientes naturales.</p>
+            <p class="fw-bold">$800</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>  <!-- Footer -->  <footer class="bg-dark text-white text-center p-4">
+    <p>&copy; 2025 EcoAlimentos. Todos los derechos reservados.</p>
+    <div>
+      <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
+      <a href="#" class="text-white me-3"><i class="bi bi-instagram"></i></a>
+      <a href="#" class="text-white"><i class="bi bi-envelope"></i></a>
+    </div>
+  </footer>  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script></body>
+</html>
